# carto2gpd

./: .gitignore  .travis.yml  README.md  conda-build.sh  deploy_anaconda.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml
carto2gpd/: __init__.py  carto2gpd.py  core.py
carto2gpd/tests/: test_get.py  test_get_size.py
carto2sf/: __init__.py  carto2sf.py
conda-recipe/: meta.yaml  meta.yml
