[tool.poetry]
name = "carto2gpd"
version = "1.0.8"
description = "A Python utility to query a CARTO database and return a geopandas GeoDataFrame"
authors = ["Nick Hand <nick.hand@phila.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
geopandas = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
coveralls = "^3.2.0"
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
